give the tweets wrapper some default min-height to prevent rendering reflow of the whole screen on mobiles

--- a/html/wp-content/themes/kremalicious2/assets/less/app.less
+++ b/html/wp-content/themes/kremalicious2/assets/less/app.less
@@ -1418,6 +1418,10 @@ aside[role="complementary"] h1 a {
 	margin-bottom: 1.5em;
 }
 
+#tweetsWrap {
+	min-height: 160px;
+}
+
 #tweets li,
 #tweets a {
 	color: @textColorDimmed;
